--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,21 @@
-name: Deploy WebApp to Local Ubuntu Server
+name: Deploy WebApp Locally
 
 on:
   push:
     branches:
-      - main  # Triggers deployment when pushing to the main branch
+      - main
 
 jobs:
   deploy:
-    runs-on: self-hosted
+    runs-on: self-hosted  # This ensures the job runs on your Ubuntu machine directly
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Deploy to Local Ubuntu Server
-        uses: appleboy/ssh-action@v0.1.4
-        with:
-          # host: 127.0.0.1
-          # host: 103.190.96.143
-          host: localhost
-          username: ubuntu
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd /var/www/html
-            rm -rf *
-            git clone https://github.com/your-username/local-webapp-deployment.git .
-            sudo systemctl restart nginx
+      - name: Deploy WebApp
+        run: |
+          cd /var/www/html
+          rm -rf *
+          cp -r ~/actions-runner/_work/your-repo-name/your-repo-name/* /var/www/html/
+          sudo systemctl restart nginx
