Update deploy.yml s2 added

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,31 @@
-# name: Deploy WebApp Locally
-
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   deploy:
-#     runs-on: self-hosted  # This ensures the job runs on your Ubuntu machine directly
-
-#     steps:
-#       - name: Checkout Repository
-#         uses: actions/checkout@v3
-
-#       - name: Deploy WebApp
-#         run: |
-#           cd /var/www/html
-#           sudo rm -rf *
-#           sudo cp -r ~/actions-runner/_work/ubuntuappactions/ubuntuappactions/index.html /var/www/html/
-#           sudo systemctl restart nginx
-
-name: Deploy WebApp
+name: Deploy to EC2
 
 on:
   push:
     branches:
-      - main  # Triggers on push to the main branch
+      - main  # Trigger deployment on push to the main branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - name: Deploy to Server
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1  # Change to your EC2 region
+
+      - name: Debug SSH Connection to EC2
+        run: |
+          echo "Checking if SSH port 22 is open on EC2..."
+          nc -zv ${{ secrets.EC2_HOST }} 22 || echo "Port 22 is closed!"
+
+      - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: 13.201.18.253
@@ -43,7 +33,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /var/www/html
-            sudo rm -rf *
-            sudo cp -r ~/actions-runner/_work/ubuntuappactions/ubuntuappactions/index.html /var/www/html/
+            rm -rf *
+            git clone https://github.com/your-username/your-repo.git .
             sudo systemctl restart nginx
-
